--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -66,11 +66,11 @@
   <!-- System TypeAhead template -->
   <script type="text/ng-template" id="systemTypeaheadResult.html">
     <a class="typeahead-left-icon">
-        <img class="location-icon" ng-src="https://image.eveonline.com/Type/{{match.model.sunTypeID}}_32.png">
+        <img class="location-icon" ng-src="https://image.eveonline.com/Type/{{match.model.sun_id}}_32.png">
         <div align="right" class="typeahead-sec {{$parent.$parent.$parent.$parent.sysSecClass(match.model.security)}}">{{$parent.$parent.$parent.$parent.sysSecStatus(match.model.security)}}</div>
         <strong>{{match.model.name}}</strong> &lt;
-        {{match.model.constellationName}} &lt;
-        {{match.model.regionName}}
+        {{match.model.constellation__name}} &lt;
+        {{match.model.region__name}}
     </a>
   </script>
 
