Fixed constellation typeahead

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -79,7 +79,7 @@
     <a class="typeahead-left-icon">
         <img class="location-icon" ng-src="/static/img/map.png">
         <strong>{{match.model.name}}</strong> &lt;
-        {{match.model.regionName}}
+        {{match.model.region__name}}
     </a>
   </script>
 
